# FlexPPQ

./: .gitignore  CMakeLists.txt  README.md  run_demo.sh
examples/: CMakeLists.txt  demo.cpp
flexppq/: CMakeLists.txt  PQ.cpp  PQ.h  PartitionedPQ.cpp  PartitionedPQ.h
flexppq/utils/: Experiment.hpp  Heap.hpp  IO.hpp  Math.hpp  MetricLogger.hpp  NumCentroidsAllocator.hpp  Random copy.hpp  Types.hpp  prefetch.h
flexppq/utils/DataQuantization/: DataQuantizer.h
